veskim-sfdx/force-app/main/default/objects/Account/fields/Approved_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Limit__c</fullName>
    <description>Final limit amount reviewed and approved by Finance authority to be transmitted to Logo ERP.</description>
    <label>Approved Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>