veskim-sfdx/force-app/main/default/objects/Account/fields/Balance_Risk_Total__c.field-meta.xml
<CustomField>
    <fullName>Balance_Risk_Total__c</fullName>
    <description>Real-time balance and risk total data received from Logo ERP.</description>
    <label>Balance and Risk Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>