veskim-sfdx/force-app/main/default/objects/Account/fields/Bank_Info_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Bank_Info_IBAN__c</fullName>
    <description>Bank account IBAN number for the customer record in Logo ERP.</description>
    <label>Bank Info (IBAN)</label>
    <length>34</length>
    <type>Text</type>
</CustomField>