veskim-sfdx/force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Logo ERP Customer Card Code (12C prefix). Used for bi-directional sync between Salesforce and Logo ERP.</description>
    <externalId>true</externalId>
    <label>External ID (Logo Customer Code)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>