veskim-sfdx/force-app/main/default/objects/Account/fields/Finance_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Status__c</fullName>
    <description>Finance department approval status for this customer record. Controls Logo ERP integration trigger.</description>
    <label>Finance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>