veskim-sfdx/force-app/main/default/objects/Account/fields/Inactivity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Reason__c</fullName>
    <description>Mandatory justification field for sales rep to fill when customer has had no activity for 3 months.</description>
    <label>Inactivity Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>