veskim-sfdx/force-app/main/default/objects/Account/fields/Limit_Status__c.field-meta.xml
<CustomField>
    <fullName>Limit_Status__c</fullName>
    <description>Risk tracking based on limit information received from Logo ERP.</description>
    <label>Limit Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>