veskim-sfdx/force-app/main/default/objects/Account/fields/Ownership_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Reason__c</fullName>
    <description>Mandatory explanation field for sales rep when claiming a passive/pool customer. Triggers notification to Sales Director.</description>
    <label>Ownership Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>