veskim-sfdx/force-app/main/default/objects/Account/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason for rejection entered by Finance when a customer record is rejected. Required via Validation Rule when status is Rejected.</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>