veskim-sfdx/force-app/main/default/objects/Account/fields/Requested_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Limit__c</fullName>
    <description>Limit amount requested by the sales representative during customer creation or limit increase request.</description>
    <label>Requested Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>