veskim-sfdx/force-app/main/default/objects/Account/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <description>Detailed sector data linked to the main sector. Required field dependent on Industry.</description>
    <label>Sub Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>