veskim-sfdx/force-app/main/default/objects/Account/fields/Tax_Certificate_Image__c.field-meta.xml
<CustomField>
    <fullName>Tax_Certificate_Image__c</fullName>
    <description>URL or reference to the tax certificate image uploaded during new customer onboarding for finance review.</description>
    <label>Tax Certificate Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>