veskim-sfdx/force-app/main/default/objects/Account/fields/Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number__c</fullName>
    <description>Tax ID (10 digits for corporate) or Turkish National ID (11 digits for individual). Required by Logo ERP rules.</description>
    <label>Tax Number / National ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>