veskim-sfdx/force-app/main/default/objects/Account/recordTypes/End_User.recordType-meta.xml
<RecordType>
    <fullName>End_User</fullName>
    <active>true</active>
    <description>End User customer type - direct consumers of Veskim products without reselling.</description>
    <label>End User</label>
</RecordType>