veskim-sfdx/force-app/main/default/objects/Account/recordTypes/Trader.recordType-meta.xml
<RecordType>
    <fullName>Trader</fullName>
    <active>true</active>
    <description>Trader customer type - business-to-business customers who resell or distribute products.</description>
    <label>Trader</label>
</RecordType>