veskim-sfdx/force-app/main/default/objects/Account/validationRules/Inactivity_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactivity_Reason_Required</fullName>
    <active>true</active>
    <description>When Customer Status is set to Passive or Pool, the Inactivity Reason field must be filled in.</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Customer_Status__c, 'Passive'),
    ISPICKVAL(Customer_Status__c, 'Pool')
  ),
  ISBLANK(Inactivity_Reason__c)
)</errorConditionFormula>
    <errorMessage>Please enter an Inactivity Reason when setting Customer Status to Passive or Pool.</errorMessage>
</ValidationRule>