veskim-sfdx/force-app/main/default/objects/Account/validationRules/Tax_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Number_Format</fullName>
    <active>true</active>
    <description>Tax Number must be 10 digits (corporate) or 11 digits (individual). Cannot be any other length.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Tax_Number__c)),
  NOT(OR(
    LEN(Tax_Number__c) = 10,
    LEN(Tax_Number__c) = 11
  ))
)</errorConditionFormula>
    <errorMessage>Tax Number must be exactly 10 digits (corporate) or 11 digits (individual Turkish National ID).</errorMessage>
</ValidationRule>